tests/e2e/semantics/service_output_unique2.error
Error: syntax error in story at line 2, column 5

2|        my_service2 command as a
          ^^^^^^^^^^^

E0108: Service output `a` must be unique. Use `as outputName`
