tests/e2e/semantics/service_output_unique2.story
my_service command as a
    my_service2 command as a
    	a = 0
